gccida/c1/get_inner_reference
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5712:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5719:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5730:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5735:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5736:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5737:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5738:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5739:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5740:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5741:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5742:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5743:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5744:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg1; // [rsp+0h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5745:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg0; // [rsp+8h] [rbp-60h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5749:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v44; // [rsp+28h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5753:21: error: expected expression
arg0 = ( tree_node *)*( &global_trees + 15); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5753:10: error: use of undeclared identifier 'tree_node'
arg0 = ( tree_node *)*( &global_trees + 15); 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5754:21: error: expected expression
arg1 = ( tree_node *)*( &global_trees + 17); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/expr.c:5754:10: error: use of undeclared identifier 'tree_node'
arg1 = ( tree_node *)*( &global_trees + 17); 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_inner_reference/src/obj/expr.o] Error 1
